--- a/.bowerrc
+++ b/.bowerrc
@@ -1,10 +1,3 @@
 {
-  "directory": "src/",
-  "timeout": 120000,
-  "registry": {
-    "search": [
-      "https://bower.herokuapp.com"
-    ]
-  }
+  "directory": "libs/"
 }
-
